--- a/TourismWebsite/Views/Shared/_Layout.cshtml
+++ b/TourismWebsite/Views/Shared/_Layout.cshtml
@@ -24,6 +24,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Contact Us</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tourists" asp-action="Index">Tourists</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Destinations" asp-action="Index">Destinations</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Guides" asp-action="Index">Guides</a>
+                            <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Agencies" asp-action="Index">Agencies</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Bookings" asp-action="Index">Bookings</a>
+                        </li>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
