--- a/TourismWebsite/Views/Shared/_Layout.cshtml
+++ b/TourismWebsite/Views/Shared/_Layout.cshtml
@@ -35,10 +35,19 @@
                             <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Agencies" asp-action="Index">Agencies</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Bookings" asp-action="Index">Bookings</a>
-                        </li>
-                        </li>
+                        @{
+                                if ( User.Identity.IsAuthenticated ){
+                                    <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="Bookings" asp-action="Index">Bookings</a>
+                                        </li>
+                                           
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Roles</a>
+                                        </li>
+                                    
+                                }
+                           }
+  
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
